# project

./: grade_explorer.html  pyproject.toml  student_performance_dashboard.html  visualization.ipynb  vizualization_marimo.py
student_performance/: description.md  student_performance.csv  student_performance.xlsx
